--- a/index.html
+++ b/index.html
@@ -7,5 +7,30 @@
     <title>Admin Dashboard</title>
     <link rel="stylesheet" href="styles.css" />
   </head>
-  <body></body>
+  <body>
+    <main>
+      <section class="header">
+        <div class="top-portion">
+          <!-- Insert search logo and input -->
+          <label for="search"></label>
+          <input type="text" name="search" id="search" />
+          <div class="noti-bell"></div>
+          <div class="brand-logo"></div>
+          <div class="account">Morgan Oakley</div>
+        </div>
+        <div class="bottom-portion">
+          <div class="brand-logo"></div>
+          <div>
+            <p>Hi there,</p>
+            <p>Morgan Oakley (@morgan)</p>
+          </div>
+          <div class="nav-buttons">
+            <button>New</button>
+            <button>Upload</button>
+            <button>Share</button>
+          </div>
+        </div>
+      </section>
+    </main>
+  </body>
 </html>
