Created elements and content for the sidebar.

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" href="styles.css" />
   </head>
   <body>
-    <main>
+    <main class="container">
       <section class="header">
         <div class="top-portion">
           <!-- Insert search logo and input -->
@@ -28,6 +28,76 @@
             <button>New</button>
             <button>Upload</button>
             <button>Share</button>
+          </div>
+        </div>
+      </section>
+
+      <section class="sidebar">
+        <div class="dashboard">
+          <div>
+            <div class="box-1"></div>
+            <div class="box-2"></div>
+            <div class="box-3"></div>
+            <div class="box-4"></div>
+          </div>
+          <p>Dashboard</p>
+        </div>
+        <div class="middle">
+          <div class="sidebar-middle">
+            <div class="empty-logo">
+              <!-- Insert logo -->
+            </div>
+            <div>Home</div>
+          </div>
+          <div class="sidebar-middle">
+            <div class="empty-logo">
+              <!-- Insert logo -->
+            </div>
+            <div>Profile</div>
+          </div>
+          <div class="sidebar-middle">
+            <div class="empty-logo">
+              <!-- Insert logo -->
+            </div>
+            <div>Messages</div>
+          </div>
+          <div class="sidebar-middle">
+            <div class="empty-logo">
+              <!-- Insert logo -->
+            </div>
+            <div>History</div>
+          </div>
+          <div class="sidebar-middle">
+            <div class="empty-logo">
+              <!-- Insert logo -->
+            </div>
+            <div>Tasks</div>
+          </div>
+          <div class="sidebar-middle">
+            <div class="empty-logo">
+              <!-- Insert logo -->
+            </div>
+            <div>Communities</div>
+          </div>
+        </div>
+        <div class="bottom">
+          <div class="sidebar-bottom">
+            <div class="empty-logo">
+              <!-- Insert logo -->
+            </div>
+            <div>Settings</div>
+          </div>
+          <div class="sidebar-bottom">
+            <div class="empty-logo">
+              <!-- Insert logo -->
+            </div>
+            <div>Suppport</div>
+          </div>
+          <div class="sidebar-bottom">
+            <div class="empty-logo">
+              <!-- Insert logo -->
+            </div>
+            <div>Privacy</div>
           </div>
         </div>
       </section>
