Created elements and content for the body portion of the page.

--- a/index.html
+++ b/index.html
@@ -101,6 +101,136 @@
           </div>
         </div>
       </section>
+
+      <section class="article-section">
+        <div class="headings">
+          <p class="projects">Your Projects</p>
+          <p class="announcements">Announcements</p>
+          <p class="trending">Trending</p>
+        </div>
+        <div class="article">
+          <p>Super Cool Project</p>
+          <p>
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptatum
+            nesciunt distinctio ipsum non a porro eaque est suscipit facere.
+          </p>
+          <div class="article-interact">
+            <!-- Insert logos -->
+            <div></div>
+            <div></div>
+            <div></div>
+          </div>
+        </div>
+        <div class="article">
+          <p>Less Cool Project</p>
+          <p></p>
+          <div class="article-interact">
+            <!-- Insert logos -->
+            <div></div>
+            <div></div>
+            <div></div>
+          </div>
+        </div>
+        <div class="article">
+          <p>Impossible App</p>
+          <p></p>
+          <div class="article-interact">
+            <!-- Insert logos -->
+            <div></div>
+            <div></div>
+            <div></div>
+          </div>
+        </div>
+        <div class="article">
+          <p>Easy Peasy App</p>
+          <p></p>
+          <div class="article-interact">
+            <!-- Insert logos -->
+            <div></div>
+            <div></div>
+            <div></div>
+          </div>
+        </div>
+        <div class="article">
+          <p>Ad Blocker</p>
+          <p></p>
+          <div class="article-interact">
+            <!-- Insert logos -->
+            <div></div>
+            <div></div>
+            <div></div>
+          </div>
+        </div>
+        <div class="article">
+          <p>Money Maker</p>
+          <p></p>
+          <div class="article-interact">
+            <!-- Insert logos -->
+            <div></div>
+            <div></div>
+            <div></div>
+          </div>
+        </div>
+        <div class="article">
+          <p>Site Maintenance</p>
+          <p>
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Numquam
+            vero aliquam animi rem dolores culpa deserunt...
+          </p>
+          <hr />
+          <p>Community Share Day</p>
+          <p>
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Nobis,
+            beatae perspiciatis? Id corrupti error ut...
+          </p>
+          <hr />
+          <p>Updated Privacy Policy</p>
+          <p>
+            Lorem ipsum dolor, sit amet consectetur adipisicing elit. Quam nobis
+            placeat harum vero, tempora molestias iste ex expedita mollitia...
+          </p>
+        </div>
+        <div class="article">
+          <div class="trending-rows">
+            <div class="trending-row">
+              <div class="logo">
+                <!-- Insert logo -->
+              </div>
+              <div class="trending-account">
+                <p class="account-address">@tegan</p>
+                <p class="account-title">World Peace Builder</p>
+              </div>
+            </div>
+            <div class="trending-row">
+              <div class="logo">
+                <!-- Insert logo -->
+              </div>
+              <div class="trending-account">
+                <p class="account-address">@morgan</p>
+                <p class="account-title">Super Cool Project</p>
+              </div>
+            </div>
+            <div class="trending-row">
+              <div class="logo">
+                <!-- Insert logo -->
+              </div>
+              <div class="trending-account">
+                <p class="account-address">@kendall</p>
+                <p class="account-title">Life Changing App</p>
+              </div>
+            </div>
+            <div class="trending-row">
+              <div class="logo">
+                <!-- Insert logo -->
+              </div>
+              <div class="trending-account">
+                <p class="account-address">@alex</p>
+                <p class="account-title">No Traffic Maker</p>
+              </div>
+            </div>
+          </div>
+        </div>
+      </section>
     </main>
   </body>
 </html>
