Inserted comments for future code.

--- a/index.html
+++ b/index.html
@@ -8,14 +8,18 @@
     <link rel="stylesheet" href="styles.css" />
   </head>
   <body>
-    <main class="container">
+    <section class="container">
       <section class="header">
         <div class="top-portion">
           <!-- Insert search logo and input -->
           <label for="search"></label>
           <input type="text" name="search" id="search" />
-          <div class="noti-bell"></div>
-          <div class="brand-logo"></div>
+          <div class="noti-bell">
+            <!-- Insert bell logo -->
+          </div>
+          <div class="brand-logo">
+            <!-- Insert brand logo -->
+          </div>
           <div class="account">Morgan Oakley</div>
         </div>
         <div class="bottom-portion">
@@ -102,7 +106,7 @@
         </div>
       </section>
 
-      <section class="article-section">
+      <section class="main-content">
         <div class="headings">
           <p class="projects">Your Projects</p>
           <p class="announcements">Announcements</p>
@@ -231,6 +235,6 @@
           </div>
         </div>
       </section>
-    </main>
+    </section>
   </body>
 </html>
