--- a/index.html
+++ b/index.html
@@ -11,28 +11,59 @@
     <section class="container">
       <section class="header">
         <div class="top-portion">
-          <!-- Insert search logo and input -->
-          <label for="search"></label>
-          <input type="text" name="search" id="search" />
-          <div class="noti-bell">
-            <!-- Insert bell logo -->
-          </div>
-          <div class="brand-logo">
-            <!-- Insert brand logo -->
-          </div>
-          <div class="account">Morgan Oakley</div>
+          <section class="top-left">
+            <div class="search-logo">
+              <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24">
+                <path
+                  d="M9.5,3A6.5,6.5 0 0,1 16,9.5C16,11.11 15.41,12.59 14.44,13.73L14.71,14H15.5L20.5,19L19,20.5L14,15.5V14.71L13.73,14.44C12.59,15.41 11.11,16 9.5,16A6.5,6.5 0 0,1 3,9.5A6.5,6.5 0 0,1 9.5,3M9.5,5C7,5 5,7 5,9.5C5,12 7,14 9.5,14C12,14 14,12 14,9.5C14,7 12,5 9.5,5Z"
+                />
+              </svg>
+            </div>
+            <label for="search"></label>
+            <input type="text" name="search" id="search" />
+          </section>
+          <section class="top-right">
+            <div class="noti-bell">
+              <!-- Insert bell logo -->
+              <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24">
+                <path
+                  d="M10,21H14A2,2 0 0,1 12,23A2,2 0 0,1 10,21M21,19V20H3V19L5,17V11C5,7.9 7.03,5.17 10,4.29C10,4.19 10,4.1 10,4A2,2 0 0,1 12,2A2,2 0 0,1 14,4C14,4.1 14,4.19 14,4.29C16.97,5.17 19,7.9 19,11V17L21,19M17,11A5,5 0 0,0 12,6A5,5 0 0,0 7,11V18H17V11M19.75,3.19L18.33,4.61C20.04,6.3 21,8.6 21,11H23C23,8.07 21.84,5.25 19.75,3.19M1,11H3C3,8.6 3.96,6.3 5.67,4.61L4.25,3.19C2.16,5.25 1,8.07 1,11Z"
+                />
+              </svg>
+            </div>
+            <div class="brand-logo">
+              <!-- Insert brand logo -->
+              <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24">
+                <path
+                  d="M12,2C6.47,2 2,6.47 2,12C2,17.53 6.47,22 12,22A10,10 0 0,0 22,12C22,6.47 17.5,2 12,2M8.88,7.82L11,9.94L9.94,11L8.88,9.94L7.82,11L6.76,9.94L8.88,7.82M12,17.5C9.67,17.5 7.69,16.04 6.89,14H17.11C16.31,16.04 14.33,17.5 12,17.5M16.18,11L15.12,9.94L14.06,11L13,9.94L15.12,7.82L17.24,9.94L16.18,11Z"
+                />
+              </svg>
+            </div>
+            <div class="account">Morgan Oakley</div>
+          </section>
         </div>
         <div class="bottom-portion">
-          <div class="brand-logo"></div>
-          <div>
-            <p>Hi there,</p>
-            <p>Morgan Oakley (@morgan)</p>
-          </div>
-          <div class="nav-buttons">
-            <button>New</button>
-            <button>Upload</button>
-            <button>Share</button>
-          </div>
+          <section class="bottom-left">
+            <div class="brand-logo">
+              <!-- Insert brand logo -->
+              <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24">
+                <path
+                  d="M12,2C6.47,2 2,6.47 2,12C2,17.53 6.47,22 12,22A10,10 0 0,0 22,12C22,6.47 17.5,2 12,2M8.88,7.82L11,9.94L9.94,11L8.88,9.94L7.82,11L6.76,9.94L8.88,7.82M12,17.5C9.67,17.5 7.69,16.04 6.89,14H17.11C16.31,16.04 14.33,17.5 12,17.5M16.18,11L15.12,9.94L14.06,11L13,9.94L15.12,7.82L17.24,9.94L16.18,11Z"
+                />
+              </svg>
+            </div>
+            <div class="account-intro">
+              <p>Hi there,</p>
+              <h3>Morgan Oakley (@morgan)</h3>
+            </div>
+          </section>
+          <section class="bottom-right">
+            <div class="header-buttons">
+              <button>New</button>
+              <button>Upload</button>
+              <button>Share</button>
+            </div>
+          </section>
         </div>
       </section>
 
